--- a/hm3_xw2598.md
+++ b/hm3_xw2598.md
@@ -3,4 +3,115 @@ p8105\_hw3\_xw2598
 Xinyao Wu
 2018-10-05
 
+problem1
+--------
 
+``` r
+#build a dataset
+devtools::install_github("p8105/p8105.datasets")
+```
+
+    ## Skipping install of 'p8105.datasets' from a github remote, the SHA1 (21f5ad1c) has not changed since last install.
+    ##   Use `force = TRUE` to force installation
+
+``` r
+library(p8105.datasets)
+library(tidyverse)
+```
+
+    ## ─ Attaching packages ─────────────────────────── tidyverse 1.2.1 ─
+
+    ## ✔ ggplot2 3.0.0     ✔ purrr   0.2.5
+    ## ✔ tibble  1.4.2     ✔ dplyr   0.7.6
+    ## ✔ tidyr   0.8.1     ✔ stringr 1.3.1
+    ## ✔ readr   1.1.1     ✔ forcats 0.3.0
+
+    ## ─ Conflicts ──────────────────────────── tidyverse_conflicts() ─
+    ## ✖ dplyr::filter() masks stats::filter()
+    ## ✖ dplyr::lag()    masks stats::lag()
+
+``` r
+library(ggridges)
+```
+
+    ## 
+    ## Attaching package: 'ggridges'
+
+    ## The following object is masked from 'package:ggplot2':
+    ## 
+    ##     scale_discrete_manual
+
+``` r
+data(brfss_smart2010)
+brfss = brfss_smart2010 %>% 
+#data cleaning
+#rename variables
+  janitor::clean_names() %>% 
+#focus on the “Overall Health” topic
+  filter(topic == "Overall Health") %>% 
+#include only responses from “Excellent” to “Poor”  (1)???
+  select(year,locationabbr,locationdesc,response,data_value) %>% 
+#organize responses as a factor
+  mutate(
+    response = factor(response)
+  )
+head(brfss, 10)
+```
+
+    ## # A tibble: 10 x 5
+    ##     year locationabbr locationdesc          response  data_value
+    ##    <int> <chr>        <chr>                 <fct>          <dbl>
+    ##  1  2010 AL           AL - Jefferson County Excellent       18.9
+    ##  2  2010 AL           AL - Jefferson County Very good       30  
+    ##  3  2010 AL           AL - Jefferson County Good            33.1
+    ##  4  2010 AL           AL - Jefferson County Fair            12.5
+    ##  5  2010 AL           AL - Jefferson County Poor             5.5
+    ##  6  2010 AL           AL - Mobile County    Excellent       15.6
+    ##  7  2010 AL           AL - Mobile County    Very good       31.3
+    ##  8  2010 AL           AL - Mobile County    Good            31.2
+    ##  9  2010 AL           AL - Mobile County    Fair            15.5
+    ## 10  2010 AL           AL - Mobile County    Poor             6.4
+
+``` r
+#In 2002, which states were observed at 7 locations
+loc_brfss = brfss %>% 
+  group_by(year,locationabbr) %>% 
+  summarise(
+    count = n_distinct(locationdesc)
+    )
+  filter(loc_brfss,count == 7,year == 2002)
+```
+
+    ## # A tibble: 3 x 3
+    ## # Groups:   year [1]
+    ##    year locationabbr count
+    ##   <int> <chr>        <int>
+    ## 1  2002 CT               7
+    ## 2  2002 FL               7
+    ## 3  2002 NC               7
+
+Comments: In 2002,CT,FL,NC were observed at 7 locations. I choose distinct specific locations which were observed in each state as the dataset, because from the original data each specific location were repetitive and the repetity doesn\`t make sence in this question.
+
+``` r
+#spaghetti plot
+ggplot(loc_brfss, aes(x = year, y = count, fill = locationabbr,color = locationabbr))+
+  geom_line() +
+  labs(
+    title = "Observations number in each state from 2002 to 2010 plot",
+    x = "year",
+    y = "Obervation numer"
+  )+
+  scale_color_hue(name = " state", h = c(0,360))
+```
+
+![](hm3_xw2598_files/figure-markdown_github/unnamed-chunk-3-1.png)
+
+``` r
+#comments
+```
+
+@Using this dataset, do or answer the following (commenting on the results of each): @Make a “spaghetti plot” that shows the number of observations in each state from 2002 to 2010.
+
+Make a table showing, for the years 2002, 2006, and 2010, the mean and standard deviation of the proportion of “Excellent” responses across locations in NY State.
+
+For each year and state, compute the average proportion in each response category (taking the average across locations in a state). Make a five-panel plot that shows, for each response category separately, the distribution of these state-level averages over time.
