--- a/hm3_xw2598.Rmd
+++ b/hm3_xw2598.Rmd
@@ -39,7 +39,7 @@ loc_brfss = brfss %>%
     )
   filter(loc_brfss,count == 7,year == 2002)
 ```
-Comments: In 2002,CT,FL,NC were observed at 7 locations. I choose distinct specific locations which were observed in each state as the dataset, because from the original data each specific location were repetitive and the repetity doesn`t make sence in this question.
+Comments: In 2002,CT,FL,NC were observed at 7 locations. I choose distinct specific locations  which were observed in each state as the dataset, because from the original data each specific location were repetitive and the repetity doesn`t make sence in this question.
 
 ```{r}
 #spaghetti plot
@@ -51,14 +51,15 @@ ggplot(loc_brfss, aes(x = year, y = count, fill = locationabbr,color = locationa
     y = "Obervation numer"
   )+
   scale_color_hue(name = " state", h = c(0,360))
-#comments
-
 
 ```
 
+Comments:  Since the number of states is large, each state line is difficult to be distinguished. But the tendency for most of the observation number in each state is clear, which seems stable.For example, NY always has more observation counts than other states.And, only few states like FL seems to have huge waves in 2002-2010.It seemed like FL had a weird high observation count in 2007 and 2010. Meanwhile, differences between states` observation numbers are also stable, seen from this plot.  
 
-@Using this dataset, do or answer the following (commenting on the results of each):
-@Make a “spaghetti plot” that shows the number of observations in each state from 2002 to 2010.
+```{r}
+
+```
+
 
 Make a table showing, for the years 2002, 2006, and 2010, the mean and standard deviation of the proportion of “Excellent” responses across locations in NY State.
 
