--- a/hm3_xw2598.md
+++ b/hm3_xw2598.md
@@ -106,11 +106,7 @@ ggplot(loc_brfss, aes(x = year, y = count, fill = locationabbr,color = locationa
 
 ![](hm3_xw2598_files/figure-markdown_github/unnamed-chunk-3-1.png)
 
-``` r
-#comments
-```
-
-@Using this dataset, do or answer the following (commenting on the results of each): @Make a “spaghetti plot” that shows the number of observations in each state from 2002 to 2010.
+Comments: Since the number of states is large, each state line is difficult to be distinguished. But the tendency for most of the observation number in each state is clear, which seems stable.For example, NY always has more observation counts than other states.And, only few states like FL seems to have huge waves in 2002-2010.It seemed like FL had a weird high observation count in 2007 and 2010. Meanwhile, differences between states\` observation numbers are also stable, seen from this plot.
 
 Make a table showing, for the years 2002, 2006, and 2010, the mean and standard deviation of the proportion of “Excellent” responses across locations in NY State.
 
