--- a/hm3_xw2598.Rmd
+++ b/hm3_xw2598.Rmd
@@ -57,12 +57,35 @@ ggplot(loc_brfss, aes(x = year, y = count, fill = locationabbr,color = locationa
 Comments:  Since the number of states is large, each state line is difficult to be distinguished. But the tendency for most of the observation number in each state is clear, which seems stable.For example, NY always has more observation counts than other states.And, only few states like FL seems to have huge waves in 2002-2010.It seemed like FL had a weird high observation count in 2007 and 2010. Meanwhile, differences between states` observation numbers are also stable, seen from this plot.  
 
 ```{r}
+# For the years 2002, 2006, and 2010, the mean and standard deviation of the proportion of “Excellent” responses across locations in NY State
+ny_brfss = brfss %>% 
+  ungroup() %>% 
+  filter(year %in% c(2002,2006,2010) & locationabbr == "NY" & response == "Excellent") %>% 
+  group_by(locationdesc) %>% 
+  summarise(
+  mean = mean(data_value, na.rm = TRUE),
+  sd = sd(data_value, na.rm = TRUE) 
+ ) 
+  ny_brfss
+ 
+```
+Comments: During 2002,2006,2010 in NY, the Westchester County and New York County had  high "excellent" proportion with the low sd value compared with other counties. Most counties have an "excellent" proportion higher than 20 except Erie County, Bronx County and Queens County. In sd column there are 3 NA value, which is because the related county only were observed only once in specific years(2002,2006,2010).
 
+```{r}
+#For each year and state,compute the average proportion in each response category
+tl_brfss = brfss %>% 
+  group_by(year, locationabbr, response) %>% 
+  summarise(
+    averange = mean(data_value)
+  )
+#make a five-panel plot
+ggplot(tl_brfss,aes(x = year, y = averange, fill = locationabbr, color = locationabbr))+
+  geom_line()+
+  facet_grid(. ~ response)
+  
 ```
 
 
-Make a table showing, for the years 2002, 2006, and 2010, the mean and standard deviation of the proportion of “Excellent” responses across locations in NY State.
-
-For each year and state, compute the average proportion in each response category (taking the average across locations in a state). Make a five-panel plot that shows, for each response category separately, the distribution of these state-level averages over time.
+For each year and state, compute the average proportion in each response category (taking the average across locations in a state).Make a five-panel plot that shows, for each response category separately, the distribution of these state-level averages over time.
 
  
