--- a/hm3_xw2598.Rmd
+++ b/hm3_xw2598.Rmd
@@ -80,12 +80,11 @@ tl_brfss = brfss %>%
   )
 #make a five-panel plot
 ggplot(tl_brfss,aes(x = year, y = averange, fill = locationabbr, color = locationabbr))+
-  geom_line()+
+  geom_point()+
   facet_grid(. ~ response)
   
 ```
+@For each year and state, compute the average proportion in each response category (taking the average across locations in a state).Make a five-panel plot that shows, for each response category separately, the distribution of these state-level averages over time.
 
-
-For each year and state, compute the average proportion in each response category (taking the average across locations in a state).Make a five-panel plot that shows, for each response category separately, the distribution of these state-level averages over time.
 
  
