--- a/hm3_xw2598.Rmd
+++ b/hm3_xw2598.Rmd
@@ -72,6 +72,7 @@ ny_brfss = brfss %>%
 Comments: During 2002,2006,2010 in NY, the Westchester County and New York County had  high "excellent" proportion with the low sd value compared with other counties. Most counties have an "excellent" proportion higher than 20 except Erie County, Bronx County and Queens County. In sd column there are 3 NA value, which is because the related county only were observed only once in specific years(2002,2006,2010).
 
 ```{r}
+
 #For each year and state,compute the average proportion in each response category
 tl_brfss = brfss %>% 
   group_by(year, locationabbr, response) %>% 
@@ -80,9 +81,10 @@ tl_brfss = brfss %>%
   )
 #make a five-panel plot
 ggplot(tl_brfss,aes(x = year, y = averange, fill = locationabbr, color = locationabbr))+
-  geom_point()+
-  facet_grid(. ~ response)
-  
+  geom_line()+
+  facet_grid(. ~ response)+
+  theme(axis.text = element_text(size = 4))
+
 ```
 @For each year and state, compute the average proportion in each response category (taking the average across locations in a state).Make a five-panel plot that shows, for each response category separately, the distribution of these state-level averages over time.
 
