--- a/hm3_xw2598.md
+++ b/hm3_xw2598.md
@@ -145,10 +145,11 @@ tl_brfss = brfss %>%
   )
 #make a five-panel plot
 ggplot(tl_brfss,aes(x = year, y = averange, fill = locationabbr, color = locationabbr))+
-  geom_point()+
-  facet_grid(. ~ response)
+  geom_line()+
+  facet_grid(. ~ response)+
+  theme(axis.text = element_text(size = 4))
 ```
 
-    ## Warning: Removed 21 rows containing missing values (geom_point).
+    ## Warning: Removed 2 rows containing missing values (geom_path).
 
 ![](hm3_xw2598_files/figure-markdown_github/unnamed-chunk-5-1.png) @For each year and state, compute the average proportion in each response category (taking the average across locations in a state).Make a five-panel plot that shows, for each response category separately, the distribution of these state-level averages over time.
