--- a/hm3_xw2598.md
+++ b/hm3_xw2598.md
@@ -19,16 +19,16 @@ library(p8105.datasets)
 library(tidyverse)
 ```
 
-    ## ─ Attaching packages ─────────────────────────── tidyverse 1.2.1 ─
+    ## -- Attaching packages ------------------------------------------------------- tidyverse 1.2.1 --
 
-    ## ✔ ggplot2 3.0.0     ✔ purrr   0.2.5
-    ## ✔ tibble  1.4.2     ✔ dplyr   0.7.6
-    ## ✔ tidyr   0.8.1     ✔ stringr 1.3.1
-    ## ✔ readr   1.1.1     ✔ forcats 0.3.0
+    ## v ggplot2 3.0.0     v purrr   0.2.5
+    ## v tibble  1.4.2     v dplyr   0.7.6
+    ## v tidyr   0.8.1     v stringr 1.3.1
+    ## v readr   1.1.1     v forcats 0.3.0
 
-    ## ─ Conflicts ──────────────────────────── tidyverse_conflicts() ─
-    ## ✖ dplyr::filter() masks stats::filter()
-    ## ✖ dplyr::lag()    masks stats::lag()
+    ## -- Conflicts ---------------------------------------------------------- tidyverse_conflicts() --
+    ## x dplyr::filter() masks stats::filter()
+    ## x dplyr::lag()    masks stats::lag()
 
 ``` r
 library(ggridges)
@@ -147,9 +147,19 @@ tl_brfss = brfss %>%
 ggplot(tl_brfss,aes(x = year, y = averange, fill = locationabbr, color = locationabbr))+
   geom_line()+
   facet_grid(. ~ response)+
-  theme(axis.text = element_text(size = 4))
+  labs(
+    title = "Distribution of each response`s state-level average proportion from 2002 to 2010",
+      x = "year",
+      y = "proportion(%)",
+      color = "States"
+  )+
+  theme(axis.text = element_text(size = 4),
+        legend.title = element_text(size = 4),
+        legend.text = element_text(size = 3)
+
+        )
 ```
 
     ## Warning: Removed 2 rows containing missing values (geom_path).
 
-![](hm3_xw2598_files/figure-markdown_github/unnamed-chunk-5-1.png) @For each year and state, compute the average proportion in each response category (taking the average across locations in a state).Make a five-panel plot that shows, for each response category separately, the distribution of these state-level averages over time.
+![](hm3_xw2598_files/figure-markdown_github/unnamed-chunk-5-1.png) Comments:This plot shows (1)in each panel(response category),the differences between most state-level proportion averages keep within 10%. (2)Obvious differences between different panels, which shows a overall tendency for all states that the percentages of responses are arranged in descending order :"Very good" &gt;"good" &gt;"Excellent" &gt;"Fair" &gt;"Poor".
