--- a/hm3_xw2598.md
+++ b/hm3_xw2598.md
@@ -104,7 +104,7 @@ ggplot(loc_brfss, aes(x = year, y = count, fill = locationabbr,color = locationa
   scale_color_hue(name = " state", h = c(0,360))
 ```
 
-![](hm3_xw2598_files/figure-markdown_github/unnamed-chunk-3-1.png)
+![](hm3_xw2598_files/figure-markdown_github/spaghetti-1.png)
 
 Comments: Since the number of states is large, each state line is difficult to be distinguished. But the tendency for most of the observation number in each state is clear, which seems stable.For example, NY always has more observation counts than other states.And, only few states like FL seems to have huge waves in 2002-2010.It seemed like FL had a weird high observation count in 2007 and 2010. Meanwhile, differences between states\` observation numbers are also stable, seen from this plot.
 
@@ -156,10 +156,87 @@ ggplot(tl_brfss,aes(x = year, y = averange, fill = locationabbr, color = locatio
   theme(axis.text = element_text(size = 4),
         legend.title = element_text(size = 4),
         legend.text = element_text(size = 3)
-
         )
 ```
 
     ## Warning: Removed 2 rows containing missing values (geom_path).
 
-![](hm3_xw2598_files/figure-markdown_github/unnamed-chunk-5-1.png) Comments:This plot shows (1)in each panel(response category),the differences between most state-level proportion averages keep within 10%. (2)Obvious differences between different panels, which shows a overall tendency for all states that the percentages of responses are arranged in descending order :"Very good" &gt;"good" &gt;"Excellent" &gt;"Fair" &gt;"Poor".
+![](hm3_xw2598_files/figure-markdown_github/plot-1.png) Comments:This plot shows (1)in each panel(response category),the differences between most state-level proportion averages keep within 10%. (2)Obvious differences between different panels, which shows a overall tendency for all states that the percentages of responses are arranged in descending order :"Very good" &gt;"good" &gt;"Excellent" &gt;"Fair" &gt;"Poor".
+
+problem 2
+---------
+
+``` r
+#load data
+library(p8105.datasets)
+data(instacart)
+str(instacart)
+```
+
+    ## Classes 'tbl_df', 'tbl' and 'data.frame':    1384617 obs. of  15 variables:
+    ##  $ order_id              : int  1 1 1 1 1 1 1 1 36 36 ...
+    ##  $ product_id            : int  49302 11109 10246 49683 43633 13176 47209 22035 39612 19660 ...
+    ##  $ add_to_cart_order     : int  1 2 3 4 5 6 7 8 1 2 ...
+    ##  $ reordered             : int  1 1 0 0 1 0 0 1 0 1 ...
+    ##  $ user_id               : int  112108 112108 112108 112108 112108 112108 112108 112108 79431 79431 ...
+    ##  $ eval_set              : chr  "train" "train" "train" "train" ...
+    ##  $ order_number          : int  4 4 4 4 4 4 4 4 23 23 ...
+    ##  $ order_dow             : int  4 4 4 4 4 4 4 4 6 6 ...
+    ##  $ order_hour_of_day     : int  10 10 10 10 10 10 10 10 18 18 ...
+    ##  $ days_since_prior_order: int  9 9 9 9 9 9 9 9 30 30 ...
+    ##  $ product_name          : chr  "Bulgarian Yogurt" "Organic 4% Milk Fat Whole Milk Cottage Cheese" "Organic Celery Hearts" "Cucumber Kirby" ...
+    ##  $ aisle_id              : int  120 108 83 83 95 24 24 21 2 115 ...
+    ##  $ department_id         : int  16 16 4 4 15 4 4 16 16 7 ...
+    ##  $ aisle                 : chr  "yogurt" "other creams cheeses" "fresh vegetables" "fresh vegetables" ...
+    ##  $ department            : chr  "dairy eggs" "dairy eggs" "produce" "produce" ...
+    ##  - attr(*, "spec")=List of 2
+    ##   ..$ cols   :List of 15
+    ##   .. ..$ order_id              : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ product_id            : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ add_to_cart_order     : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ reordered             : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ user_id               : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ eval_set              : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
+    ##   .. ..$ order_number          : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ order_dow             : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ order_hour_of_day     : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ days_since_prior_order: list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ product_name          : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
+    ##   .. ..$ aisle_id              : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ department_id         : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ aisle                 : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
+    ##   .. ..$ department            : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
+    ##   ..$ default: list()
+    ##   .. ..- attr(*, "class")= chr  "collector_guess" "collector"
+    ##   ..- attr(*, "class")= chr "col_spec"
+
+``` r
+#write a short description of the dataset, noting the size and structure of the data, describing some key variables, and giving illstrative examples of observations.
+```
+
+The goal is to do some exploration of this dataset. To that end, write a short description of the dataset, noting the size and structure of the data, describing some key variables, and giving illstrative examples of observations.
+
+``` r
+#how many aisles are there, and which aisles are the most items ordered from?
+nrow(distinct(instacart, aisle))
+```
+
+    ## [1] 134
+
+Comments: (1)There are 134 aisles, and
+Then, do or answer the following (commenting on the results of each): How many aisles are there, and which aisles are the most items ordered from? Make a plot that shows the number of items ordered in each aisle. Order aisles sensibly, and organize your plot so others can read it. Make a table showing the most popular item aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits” Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).
