--- a/hm3_xw2598.md
+++ b/hm3_xw2598.md
@@ -4,7 +4,7 @@ Xinyao Wu
 2018-10-05
 
 problem1
---------
+========
 
 ``` r
 #build a dataset
@@ -170,66 +170,23 @@ problem 2
 #load data
 library(p8105.datasets)
 data(instacart)
-str(instacart)
+names(instacart)
 ```
 
-    ## Classes 'tbl_df', 'tbl' and 'data.frame':    1384617 obs. of  15 variables:
-    ##  $ order_id              : int  1 1 1 1 1 1 1 1 36 36 ...
-    ##  $ product_id            : int  49302 11109 10246 49683 43633 13176 47209 22035 39612 19660 ...
-    ##  $ add_to_cart_order     : int  1 2 3 4 5 6 7 8 1 2 ...
-    ##  $ reordered             : int  1 1 0 0 1 0 0 1 0 1 ...
-    ##  $ user_id               : int  112108 112108 112108 112108 112108 112108 112108 112108 79431 79431 ...
-    ##  $ eval_set              : chr  "train" "train" "train" "train" ...
-    ##  $ order_number          : int  4 4 4 4 4 4 4 4 23 23 ...
-    ##  $ order_dow             : int  4 4 4 4 4 4 4 4 6 6 ...
-    ##  $ order_hour_of_day     : int  10 10 10 10 10 10 10 10 18 18 ...
-    ##  $ days_since_prior_order: int  9 9 9 9 9 9 9 9 30 30 ...
-    ##  $ product_name          : chr  "Bulgarian Yogurt" "Organic 4% Milk Fat Whole Milk Cottage Cheese" "Organic Celery Hearts" "Cucumber Kirby" ...
-    ##  $ aisle_id              : int  120 108 83 83 95 24 24 21 2 115 ...
-    ##  $ department_id         : int  16 16 4 4 15 4 4 16 16 7 ...
-    ##  $ aisle                 : chr  "yogurt" "other creams cheeses" "fresh vegetables" "fresh vegetables" ...
-    ##  $ department            : chr  "dairy eggs" "dairy eggs" "produce" "produce" ...
-    ##  - attr(*, "spec")=List of 2
-    ##   ..$ cols   :List of 15
-    ##   .. ..$ order_id              : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
-    ##   .. ..$ product_id            : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
-    ##   .. ..$ add_to_cart_order     : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
-    ##   .. ..$ reordered             : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
-    ##   .. ..$ user_id               : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
-    ##   .. ..$ eval_set              : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ order_number          : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
-    ##   .. ..$ order_dow             : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
-    ##   .. ..$ order_hour_of_day     : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
-    ##   .. ..$ days_since_prior_order: list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
-    ##   .. ..$ product_name          : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ aisle_id              : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
-    ##   .. ..$ department_id         : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
-    ##   .. ..$ aisle                 : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ department            : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   ..$ default: list()
-    ##   .. ..- attr(*, "class")= chr  "collector_guess" "collector"
-    ##   ..- attr(*, "class")= chr "col_spec"
+    ##  [1] "order_id"               "product_id"            
+    ##  [3] "add_to_cart_order"      "reordered"             
+    ##  [5] "user_id"                "eval_set"              
+    ##  [7] "order_number"           "order_dow"             
+    ##  [9] "order_hour_of_day"      "days_since_prior_order"
+    ## [11] "product_name"           "aisle_id"              
+    ## [13] "department_id"          "aisle"                 
+    ## [15] "department"
 
 ``` r
-#write a short description of the dataset, noting the size and structure of the data, describing some key variables, and giving illstrative examples of observations.
+#This is a 1384617 rows * 15 cols dataset which indicates the information of costomers` order details and their products` details. 
+#The key variables include days_since_prior_order, aisle_id, department_id and so on.
+#For example,in var 'days_since_prior_order', each value means the gap days from this costomer`s last order to this one. The var 'department_id' shows which departments each product belong to, which can be studied to explore which departments is most sold.
 ```
-
-The goal is to do some exploration of this dataset. To that end, write a short description of the dataset, noting the size and structure of the data, describing some key variables, and giving illstrative examples of observations.
 
 ``` r
 #how many aisles are there, and which aisles are the most items ordered from?
