--- a/hm3_xw2598.md
+++ b/hm3_xw2598.md
@@ -170,17 +170,16 @@ problem 2
 #load data
 library(p8105.datasets)
 data(instacart)
-names(instacart)
+nrow(instacart)
 ```
 
-    ##  [1] "order_id"               "product_id"            
-    ##  [3] "add_to_cart_order"      "reordered"             
-    ##  [5] "user_id"                "eval_set"              
-    ##  [7] "order_number"           "order_dow"             
-    ##  [9] "order_hour_of_day"      "days_since_prior_order"
-    ## [11] "product_name"           "aisle_id"              
-    ## [13] "department_id"          "aisle"                 
-    ## [15] "department"
+    ## [1] 1384617
+
+``` r
+ncol(instacart)
+```
+
+    ## [1] 15
 
 ``` r
 #This is a 1384617 rows * 15 cols dataset which indicates the information of costomers` order details and their products` details. 
@@ -230,7 +229,7 @@ instacart %>%
 
     ## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
 
-![](hm3_xw2598_files/figure-markdown_github/p2_-1.png)
+![](hm3_xw2598_files/figure-markdown_github/p2-1.png)
 
 ``` r
 #Make a table showing the most popular item aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”
@@ -255,12 +254,101 @@ pac_v = instacart %>%
    summarise( n = n()) %>% 
    arrange(n) %>% 
    tail(1)
-
-#Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week;
+table_popular_item = tibble(
+  aisle = c("baking ingredients","dog food care","packaged vegetables fruits"),
+  most_popular_item = c("Light Brown Sugar", "Snack Sticks Chicken & Rice Recipe Dog Treats","Organic Baby Spinach")
+)
+table_popular_item
 ```
 
+    ## # A tibble: 3 x 2
+    ##   aisle                      most_popular_item                            
+    ##   <chr>                      <chr>                                        
+    ## 1 baking ingredients         Light Brown Sugar                            
+    ## 2 dog food care              Snack Sticks Chicken & Rice Recipe Dog Treats
+    ## 3 packaged vegetables fruits Organic Baby Spinach
+
+``` r
+#Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week;
+table_mean_hour = instacart %>% 
+  filter(product_name == "Pink Lady Apples"|product_name == "Coffee Ice Cream") %>% 
+  select(order_dow, product_name, order_hour_of_day) %>% 
+  group_by(product_name,order_dow) %>% 
+  summarise(mean_hour = mean(order_hour_of_day, na.rm = TRUE)) %>% 
+  spread(key = order_dow, value = mean_hour) 
+  table_mean_hour
+```
+
+    ## # A tibble: 2 x 8
+    ## # Groups:   product_name [2]
+    ##   product_name       `0`   `1`   `2`   `3`   `4`   `5`   `6`
+    ##   <chr>            <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>
+    ## 1 Coffee Ice Cream  13.8  14.3  15.4  15.3  15.2  12.3  13.8
+    ## 2 Pink Lady Apples  13.4  11.4  11.7  14.2  11.6  12.8  11.9
+
 Comments: (1)There are 134 aisles, and the fresh vegetables is the most items ordered from. (2)The Histogram shows roughly that two aisles have obviously more items than others and their id is between 20-25 and 80-85.Apart from this, we can see the distribution of the item numbers in each aisle arranged by their id number.
+(3)The most popular item in aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits” is repectively "Light Brown Sugar", "Snack Sticks Chicken & Rice Recipe Dog Treats", "Organic Baby Spinach" (4)Except Sunday and Friday, Pink Lady Apples orderred mean hour is obviously smaller than that of Coffee Ice Cream. Also, Pink Lady Apples were orderred at noon in most of the day but Coffee Ice Cream were orderred in the afternoon at most times.
 
-Make a table showing the most popular item aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”
+problem3
+--------
 
-Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).
+``` r
+data(ny_noaa)
+ncol(ny_noaa)
+```
+
+    ## [1] 7
+
+``` r
+nrow(ny_noaa)
+```
+
+    ## [1] 2595176
+
+``` r
+arrange(ny_noaa,date) %>% head(1)
+```
+
+    ## # A tibble: 1 x 7
+    ##   id          date        prcp  snow  snwd tmax  tmin 
+    ##   <chr>       <date>     <int> <int> <int> <chr> <chr>
+    ## 1 USC00300023 1981-01-01     0     0     0 -56   <NA>
+
+``` r
+arrange(ny_noaa,date) %>% tail(1)
+```
+
+    ## # A tibble: 1 x 7
+    ##   id          date        prcp  snow  snwd tmax  tmin 
+    ##   <chr>       <date>     <int> <int> <int> <chr> <chr>
+    ## 1 USW00094790 2010-12-31     0    NA    NA 117   44
+
+``` r
+nrow(na.omit(select(ny_noaa,tmax,tmin)))/nrow(ny_noaa)
+```
+
+    ## [1] 0.5621584
+
+``` r
+nrow(na.omit(select(ny_noaa,prcp)))/nrow(ny_noaa)
+```
+
+    ## [1] 0.9438042
+
+``` r
+nrow(na.omit(select(ny_noaa,snow)))/nrow(ny_noaa)
+```
+
+    ## [1] 0.853104
+
+``` r
+nrow(na.omit(select(ny_noaa,snwd)))/nrow(ny_noaa)
+```
+
+    ## [1] 0.7719669
+
+This is a 2595176 rows \* 7 cols dataset which indicates the New York weather information from 1981-01-01 to 2010-12-31, such as precipitation,Snowfall,Snow depth, Maximum and minimum temperature, which were collected by New York state weather stations characterized by id number.
+
+key varibales:'prcp' indicates precipitation,'snow' indicates Snowfall,'snwd' denotes Snow depth, 'tmax' and 'tmin' respectively denotes Maximum and minimum temperature. The missing value of 'tmax' and 'tmin' took 56% of total, so this became a serious issue. Beside this, the proportions of missing values of 'prcp','snow','snwd' were respectively 0.94,0.85,0.77.
+
+Do some data cleaning. Create separate variables for year, month, and day. Ensure observations for temperature, precipitation, and snowfall are given in reasonable units. For snowfall, what are the most commonly observed values? Why? Make a two-panel plot showing the average max temperature in January and in July in each station across years. Is there any observable / interpretable structure? Any outliers? Make a two-panel plot showing (i) tmax vs tmin for the full dataset (note that a scatterplot may not be the best option); and (ii) make a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year.
