--- a/hm3_xw2598.md
+++ b/hm3_xw2598.md
@@ -351,4 +351,36 @@ This is a 2595176 rows \* 7 cols dataset which indicates the New York weather in
 
 key varibales:'prcp' indicates precipitation,'snow' indicates Snowfall,'snwd' denotes Snow depth, 'tmax' and 'tmin' respectively denotes Maximum and minimum temperature. The missing value of 'tmax' and 'tmin' took 56% of total, so this became a serious issue. Beside this, the proportions of missing values of 'prcp','snow','snwd' were respectively 0.94,0.85,0.77.
 
-Do some data cleaning. Create separate variables for year, month, and day. Ensure observations for temperature, precipitation, and snowfall are given in reasonable units. For snowfall, what are the most commonly observed values? Why? Make a two-panel plot showing the average max temperature in January and in July in each station across years. Is there any observable / interpretable structure? Any outliers? Make a two-panel plot showing (i) tmax vs tmin for the full dataset (note that a scatterplot may not be the best option); and (ii) make a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year.
+``` r
+new_noaa = ny_noaa %>% 
+#data cleaning
+ janitor::clean_names() %>% 
+#Create separate variables for year, month, and day
+ separate(date, into = c("year","month","day"),sep = "-") 
+#Ensure observations for temperature, precipitation, and snowfall are given in reasonable units
+ new_noaa$tmax = as.numeric(new_noaa$tmax)/10
+ new_noaa$tmin = as.numeric(new_noaa$tmin)/10
+ new_noaa$prcp = as.numeric(new_noaa$prcp)/10
+# snowfall 
+ new_noaa %>% 
+   na.omit(.$snow) %>% 
+   count(.$snow) %>%
+   arrange(.,n) %>%
+   tail()
+```
+
+    ## # A tibble: 6 x 2
+    ##   `.$snow`       n
+    ##      <int>   <int>
+    ## 1        8    5380
+    ## 2        5    5669
+    ## 3       51    9252
+    ## 4       13   12460
+    ## 5       25   15809
+    ## 6        0 1112758
+
+Comments:
+
+(1)For snowfall, 0 is the most commonly observed values. Because in summer,spring,autumn there is no snowfall and each observation of this dataset is counted by day. So the most observed value means the largest number of days this value was collected, that is why 0 is the most.
+
+Make a two-panel plot showing the average max temperature in January and in July in each station across years. Is there any observable / interpretable structure? Any outliers? Make a two-panel plot showing (i) tmax vs tmin for the full dataset (note that a scatterplot may not be the best option); and (ii) make a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year.
