--- a/hm3_xw2598.md
+++ b/hm3_xw2598.md
@@ -383,4 +383,30 @@ Comments:
 
 (1)For snowfall, 0 is the most commonly observed values. Because in summer,spring,autumn there is no snowfall and each observation of this dataset is counted by day. So the most observed value means the largest number of days this value was collected, that is why 0 is the most.
 
-Make a two-panel plot showing the average max temperature in January and in July in each station across years. Is there any observable / interpretable structure? Any outliers? Make a two-panel plot showing (i) tmax vs tmin for the full dataset (note that a scatterplot may not be the best option); and (ii) make a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year.
+``` r
+#Make a two-panel plot
+  new_noaa %>% 
+  filter(month == '01'|month == '07') %>% 
+   group_by(year,month) %>% 
+   summarise(
+   averange = mean(tmax,na.rm = TRUE)
+   ) %>% 
+   ggplot(aes(x = as.numeric(year),y = averange,color = month))+
+     geom_point()+
+  geom_smooth(se = FALSE)+
+   labs(
+      x = "Year",
+      y = "Average Max Temperature",
+      color = "month"
+  )+
+  theme(axis.text = element_text(size = 3))+
+     facet_grid(. ~ month)
+```
+
+    ## `geom_smooth()` using method = 'loess' and formula 'y ~ x'
+
+![](hm3_xw2598_files/figure-markdown_github/p3_q2-1.png)
+
+Make a two-panel plot showing the average max temperature in January and in July in each station across years. Is there any observable / interpretable structure? Any outliers?
+
+Make a two-panel plot showing (i) tmax vs tmin for the full dataset (note that a scatterplot may not be the best option); and (ii) make a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year.
