--- a/hm3_xw2598.md
+++ b/hm3_xw2598.md
@@ -410,4 +410,20 @@ From the plot we can see clearly that the averange max temperature in January wa
 
 outliers:I considered those points which were out of the se scale and in the opposite tendency of the prior points as possible outliers. They include: The averange Tmaxin January in 1994,2003.
 
-Make a two-panel plot showing (i) tmax vs tmin for the full dataset (note that a scatterplot may not be the best option); and (ii) make a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year.
+``` r
+#Make a two-panel plot
+library(patchwork)
+#(i) tmax vs tmin for the full dataset
+temp = ggplot(new_noaa, aes(x = tmax, y = tmin)) + 
+       geom_hex()
+
+#(ii) make a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year.
+new_noaa %>% 
+filter(snow > 0 & snow<100) %>% 
+  ggplot(aes(x = year,y = snow))+geom_violin(aes(color = year))+
+  theme(axis.text = element_text(size = 4.5) )
+```
+
+![](hm3_xw2598_files/figure-markdown_github/q3_q3-1.png) Comments: (1)From the plot we can see the Tmin had a hign density in (-15,15), Tmax had a hign density in (0,30). And excluding outliers, Tmin mainly ranged from (-45,45), Tmax mainly ranged from (-30,40). We can also make a stardard for excluding outliers in this plot because the whole dara were crowded, those obviously were out of range can be seen as outliers.
+
+Make a two-panel plot showing (i) tmax vs tmin for the full dataset (note that a scatterplot may not be the best option);and (ii) make a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year.
