--- a/hm3_xw2598.md
+++ b/hm3_xw2598.md
@@ -161,7 +161,9 @@ ggplot(tl_brfss,aes(x = year, y = averange, fill = locationabbr, color = locatio
 
     ## Warning: Removed 2 rows containing missing values (geom_path).
 
-![](hm3_xw2598_files/figure-markdown_github/plot-1.png) Comments:This plot shows (1)in each panel(response category),the differences between most state-level proportion averages keep within 10%. (2)Obvious differences between different panels, which shows a overall tendency for all states that the percentages of responses are arranged in descending order :"Very good" &gt;"good" &gt;"Excellent" &gt;"Fair" &gt;"Poor".
+![](hm3_xw2598_files/figure-markdown_github/plot-1.png)
+
+Comments:This plot shows (1)in each panel(response category),the differences between most state-level proportion averages keep within 10%. (2)Obvious differences between different panels, which shows a overall tendency for all states that the percentages of responses are arranged in descending order :"Very good" &gt;"good" &gt;"Excellent" &gt;"Fair" &gt;"Poor".
 
 problem 2
 ---------
@@ -182,10 +184,62 @@ ncol(instacart)
     ## [1] 15
 
 ``` r
-#This is a 1384617 rows * 15 cols dataset which indicates the information of costomers` order details and their products` details. 
-#The key variables include days_since_prior_order, aisle_id, department_id and so on.
-#For example,in var 'days_since_prior_order', each value means the gap days from this costomer`s last order to this one. The var 'department_id' shows which departments each product belong to, which can be studied to explore which departments is most sold.
+str(instacart)
 ```
+
+    ## Classes 'tbl_df', 'tbl' and 'data.frame':    1384617 obs. of  15 variables:
+    ##  $ order_id              : int  1 1 1 1 1 1 1 1 36 36 ...
+    ##  $ product_id            : int  49302 11109 10246 49683 43633 13176 47209 22035 39612 19660 ...
+    ##  $ add_to_cart_order     : int  1 2 3 4 5 6 7 8 1 2 ...
+    ##  $ reordered             : int  1 1 0 0 1 0 0 1 0 1 ...
+    ##  $ user_id               : int  112108 112108 112108 112108 112108 112108 112108 112108 79431 79431 ...
+    ##  $ eval_set              : chr  "train" "train" "train" "train" ...
+    ##  $ order_number          : int  4 4 4 4 4 4 4 4 23 23 ...
+    ##  $ order_dow             : int  4 4 4 4 4 4 4 4 6 6 ...
+    ##  $ order_hour_of_day     : int  10 10 10 10 10 10 10 10 18 18 ...
+    ##  $ days_since_prior_order: int  9 9 9 9 9 9 9 9 30 30 ...
+    ##  $ product_name          : chr  "Bulgarian Yogurt" "Organic 4% Milk Fat Whole Milk Cottage Cheese" "Organic Celery Hearts" "Cucumber Kirby" ...
+    ##  $ aisle_id              : int  120 108 83 83 95 24 24 21 2 115 ...
+    ##  $ department_id         : int  16 16 4 4 15 4 4 16 16 7 ...
+    ##  $ aisle                 : chr  "yogurt" "other creams cheeses" "fresh vegetables" "fresh vegetables" ...
+    ##  $ department            : chr  "dairy eggs" "dairy eggs" "produce" "produce" ...
+    ##  - attr(*, "spec")=List of 2
+    ##   ..$ cols   :List of 15
+    ##   .. ..$ order_id              : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ product_id            : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ add_to_cart_order     : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ reordered             : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ user_id               : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ eval_set              : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
+    ##   .. ..$ order_number          : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ order_dow             : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ order_hour_of_day     : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ days_since_prior_order: list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ product_name          : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
+    ##   .. ..$ aisle_id              : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ department_id         : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ aisle                 : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
+    ##   .. ..$ department            : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
+    ##   ..$ default: list()
+    ##   .. ..- attr(*, "class")= chr  "collector_guess" "collector"
+    ##   ..- attr(*, "class")= chr "col_spec"
+
+This is a 1384617 rows \* 15 cols dataset which indicates the information of costomers order details and their products`details.  The key variables include days_since_prior_order(int), aisle_id(int), department_id(int) and so on. For example,in var 'days_since_prior_order', each value means the gap days from this costomer`s last order to this one. The var 'department\_id' shows which departments each product belong to, which can be studied to explore which departments is most sold.
 
 ``` r
 #how many aisles are there, and which aisles are the most items ordered from?
@@ -306,6 +360,39 @@ nrow(ny_noaa)
     ## [1] 2595176
 
 ``` r
+str(ny_noaa)
+```
+
+    ## Classes 'tbl_df', 'tbl' and 'data.frame':    2595176 obs. of  7 variables:
+    ##  $ id  : chr  "US1NYAB0001" "US1NYAB0001" "US1NYAB0001" "US1NYAB0001" ...
+    ##  $ date: Date, format: "2007-11-01" "2007-11-02" ...
+    ##  $ prcp: int  NA NA NA NA NA NA NA NA NA NA ...
+    ##  $ snow: int  NA NA NA NA NA NA NA NA NA NA ...
+    ##  $ snwd: int  NA NA NA NA NA NA NA NA NA NA ...
+    ##  $ tmax: chr  NA NA NA NA ...
+    ##  $ tmin: chr  NA NA NA NA ...
+    ##  - attr(*, "spec")=List of 2
+    ##   ..$ cols   :List of 7
+    ##   .. ..$ id  : list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
+    ##   .. ..$ date:List of 1
+    ##   .. .. ..$ format: chr ""
+    ##   .. .. ..- attr(*, "class")= chr  "collector_date" "collector"
+    ##   .. ..$ prcp: list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ snow: list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ snwd: list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
+    ##   .. ..$ tmax: list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
+    ##   .. ..$ tmin: list()
+    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
+    ##   ..$ default: list()
+    ##   .. ..- attr(*, "class")= chr  "collector_guess" "collector"
+    ##   ..- attr(*, "class")= chr "col_spec"
+
+``` r
 arrange(ny_noaa,date) %>% head(1)
 ```
 
@@ -349,7 +436,7 @@ nrow(na.omit(select(ny_noaa,snwd)))/nrow(ny_noaa)
 
 This is a 2595176 rows \* 7 cols dataset which indicates the New York weather information from 1981-01-01 to 2010-12-31, such as precipitation,Snowfall,Snow depth, Maximum and minimum temperature, which were collected by New York state weather stations characterized by id number.
 
-key varibales:'prcp' indicates precipitation,'snow' indicates Snowfall,'snwd' denotes Snow depth, 'tmax' and 'tmin' respectively denotes Maximum and minimum temperature. The missing value of 'tmax' and 'tmin' took 56% of total, so this became a serious issue. Beside this, the proportions of missing values of 'prcp','snow','snwd' were respectively 0.94,0.85,0.77.
+key varibales:'prcp'(int) indicates precipitation,'snow'(int) indicates Snowfall,'snwd'(int) denotes Snow depth, 'tmax'(chr) and 'tmin'(chr) respectively denotes Maximum and minimum temperature. The missing value of 'tmax' and 'tmin' took 56% of total, so this became a serious issue. Beside this, the proportions of missing values of 'prcp','snow','snwd' were respectively 0.94,0.85,0.77.
 
 ``` r
 new_noaa = ny_noaa %>% 
